--- a/machine.html
+++ b/machine.html
@@ -91,15 +91,15 @@
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698266263-computer-vision-machine-learning-engineer-engineering-center-cluj'>Bosch Group Computer Vision & Machine Learning Engineer, Engineering Center Cluj | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698266263-computer-vision-machine-learning-engineer-engineering-center-cluj'>Bosch Group Computer Vision & Machine Learning Engineer, Engineering Center Cluj | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1933414'>Job Application for Senior Machine Learning Engineer at Sony Interactive Entertainment PlayStation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1933414'>Job Application for Senior Machine Learning Engineer at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=a504b6c71'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=a504b6c71'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -147,7 +147,7 @@ research?...</p>
 <p>Oct 16, 2019 ... We are looking for a Data Scientist, Machine Learning Engineer, or Research 
 Engineer to join the Cityblock Prototype Engineering team. You will work with?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/stridehealth/c019f01c-52aa-4ac7-802d-53fed87c4044'>Stride Health - Senior Data Scientist / Machine Learning (ML) Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/stridehealth/c019f01c-52aa-4ac7-802d-53fed87c4044'>Stride Health - Senior Data Scientist / Machine Learning (ML) Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -235,7 +235,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/novetta/jobs/4481354002'>Job Application for Machine Learning Intern at Novetta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/novetta/jobs/4481354002'>Job Application for Machine Learning Intern at Novetta</a></h5> 
 <p><span class="badge badge-light">Mc Lean, Virginia</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -375,7 +375,7 @@ deploy Machine Learning models into the company's core services. You'll be?...</
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://idalab.softgarden.io/job/5132937/Machine-Learning-Engineer-for-Drug-Development-at-HotSpot-Therapeutics-m-f-d-?jobDbPVId=14043567&amp;l=en'>Machine Learning Engineer for Drug Development at HotSpot Therapeutics (m/f/d) at idalab GmbH | softgarden</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idalab.softgarden.io/job/5132937/Machine-Learning-Engineer-for-Drug-Development-at-HotSpot-Therapeutics-m-f-d-?jobDbPVId=14043567&amp;l=en'>Machine Learning Engineer for Drug Development at HotSpot Therapeutics (m/f/d) at idalab GmbH | softgarden</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -393,7 +393,7 @@ to?...</p>
 <p><span class="badge badge-light">Reston, Virginia</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/isee/26c39cdb-5a1d-4fce-a71a-db2f1d6bf012'>isee - Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/isee/26c39cdb-5a1d-4fce-a71a-db2f1d6bf012'>isee - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -462,7 +462,7 @@ and?...</p>
 <p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/foursquare26/jobs/1920039'>Job Application for Software Engineer - Machine Learning  at Foursquare</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foursquare26/jobs/1920039'>Job Application for Software Engineer - Machine Learning  at Foursquare</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -486,7 +486,7 @@ and?...</p>
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idealocareer.recruitee.com/l/en/o/product-owner-fmx-machine-learning-engineering'>
+<h5><a href='https://idealocareer.recruitee.com/l/en/o/product-owner-fmx-machine-learning-engineering'>
       Product Owner (f|m|x) Machine Learning Engineering - idealo internet GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
